--- a/report/chap-2.tex
+++ b/report/chap-2.tex
@@ -1,4 +1,4 @@
-\chapter{The Next Chapter}
+\chapter{The Learning Algorithm\\}
 \label{cha:2}
 Herinner de lezer nog even de structuur die gaat worden gevolgd. 
 Learning, planning, tracking, validatie.
@@ -71,27 +71,6 @@ you prefer?
   \label{tab:ok}
 \end{table}
 
-\section{Lorem Ipsum}
-This section is added to check headers and footers. So this chapter must at
-least contain three pages. To make sure that we get the required amount,
-the \textsf{lipsum} package isn't used but the text is put directly in the
-text.
-
-\subsection{Lorem ipsum dolor sit amet, consectetur adipiscing elit}
-Se
-
-\subsection{Praesent auctor venenatis posuere}
-Seec sollicitudin sem urna eu magna. Nunc sed est urna, euismod congue
-mi.
-
-\subsection{Cras vulputate ultricies venenatis}
-Vivam
-
-\subsection{Donec nibh ante, consectetur et posuere id, tempus nec arcu}
-Curab
-
-\subsection{Morbi et mauris tempus purus ornare vehicula}
-Mauris 
 
 \section{Conclusion}
 The final section of the chapter gives an overview of the important results
