22-02-12-11-small notes in report

--- a/report/chap-1.tex
+++ b/report/chap-1.tex
@@ -34,6 +34,14 @@ Dit is de reden voor het gebruik van de maximum entropie distributie:
 	Modelling expected featueres by hybrid monte carlo method: https://reader.elsevier.com/reader/sd/pii/037026938791197X?token=71567B7640C402F2FF578E34E3BB7914CA14E4A1A29DE88D9534D96C9305E13DA52D0424FF1475A822FCE784725196D3
 %	ref: C:\Users\t2vosx\OneDrive\Documenten\Leuven\Thesis\References2\Citations on main %paper\Learning to Predict Trajectories of Cooperatively Navigating Agents.pdf>
 
+ 	paper: Feature-based prediction of trajectories for socially compliant navigation
+	which
+	states that the distribution with the highest entropy represents
+	the given information best since it does not favor any
+	particular outcome besides the observed constraints.
+	
+%	• Weet dat exponentiële vorm oplossing is van boven staand optimizatie probleem. zie foto
+%	--> volgt uit FONC --> oplossing moet (non convex) voldoen aan KKT conditions. Er zijn enkel maar equality constraints aanwezig --> primal feasibility en lagrange stationarity moeten voldaan worden --> LS wordt gecontroleerd drm van de Euler - lagrange vergelijking te gebruiken. 
 
 
 
