--- a/report/chap-2.tex
+++ b/report/chap-2.tex
@@ -20,6 +20,13 @@ Modeleer een andere bestuurder. Can try to reproduce a data set with a change of
 Ligt een tipje van de sluier op : hoe zal de data gegenereerd worden? (dit moet kort blijven)
 Plot simulink model en duidt de blokken aan die zullen worden ingevuld. Hier gaat dieper in gegaan worden in de volgende hoofdstukken. 
 
+Maak een vermelding dat men het menselijke gedrag van het geleerde model kan nagaan met een Turing test.\\
+
+Maak een plotje zoals paper Learning to Predict Trajectories of Cooperatively Navigating Agents --> feature variance afwijking en average error. (zelfde plotjes als al de papers)
+
+%Afleiding van exponentiël functie zie paper: Feature-based prediction of trajectories for socially compliant navigation (foto) --> weights are lagrange coefficients.
+
+
 \section{The First Topic of this Chapter}
 
 
