--- a/report/chap-3.tex
+++ b/report/chap-3.tex
@@ -5,7 +5,8 @@ MPC --> path planning met het gevonden model.
 
 Ga hier volledig in op wat MPC is.
 Valideer de MPC code door na te gaan wat de invloed is bij het varieren van de gevonden parameters.
-Hoeveel zal het verschillen? Ga in op het gebruikte point model en bespreek de gelijkenissen en de verschillen van het learning algorithm. (zie ook notes VS en verbeteringen NAETS)
+Hoeveel zal het verschillen? Ga in op het gebruikte point model/non-linear model en bespreek de gelijkenissen en de verschillen van het learning algorithm. (zie ook notes VS en verbeteringen NAETS)
+
 
 
 
