--- a/report/chap-2.tex
+++ b/report/chap-2.tex
@@ -22,7 +22,16 @@ Plot simulink model en duidt de blokken aan die zullen worden ingevuld. Hier gaa
 
 Maak een vermelding dat men het menselijke gedrag van het geleerde model kan nagaan met een Turing test.\\
 
-Maak een plotje zoals paper Learning to Predict Trajectories of Cooperatively Navigating Agents --> feature variance afwijking en average error. (zelfde plotjes als al de papers)
+Maak een plotje zoals paper Learning to Predict Trajectories of Cooperatively Navigating Agents --> feature variance afwijking en average error. (zelfde plotjes als al de papers)\\
+
+
+
+Check uitgebreide samenvatting van hoofdpaper op oneNote.
+
+
+
+\clearpage
+
 
 %Afleiding van exponentiël functie zie paper: Feature-based prediction of trajectories for socially compliant navigation (foto) --> weights are lagrange coefficients.
 
