22-02-22-00-full_check_done_old_code

--- a/report/chap-2.tex
+++ b/report/chap-2.tex
@@ -28,7 +28,10 @@ Maak een plotje zoals paper Learning to Predict Trajectories of Cooperatively Na
 
 Check uitgebreide samenvatting van hoofdpaper op oneNote.
 
+Schrijf een paragraaf over de theta update --> zie RPROP methode --> beschrijf wrm beter is dan andere methodes die gezien werden. Bespreek hoe de parameters werden gekozen. 
 
+
+Kan vermelding maken dat in deze thesis de features zijn gekozen met de hand --> men kan proberen om de features ook te leren van date (Characterizing Driving Styles with Deep Learning)
 
 \clearpage
 
